Added some of the outline

--- a/types.html
+++ b/types.html
@@ -22,7 +22,25 @@
   <![endif]-->
 
     <!-- Add your site or application content here -->
-    <h1>Bio</h1>
+    <header>
+        <nav>
+            <ul>
+                <li>
+                    <a href="index.html">Home</a>
+                </li>
+                <li>
+                    <a href="History.html">History</a>
+                </li>
+                <li>
+                    <a href="types.html">Types</a>
+                </li>
+                <li>
+                    <a href="Antivirus.html">Antivirus</a>
+                </li>
+            </ul>
+        </nav>
+    </header>
+    <h1>Types of viruses</h1>
     <p>Hello world! This is HTML5 Boilerplate.</p>
 
 
@@ -34,7 +52,15 @@
 
 
 
+    <footer>
+        <a href="index.html">Home</a>
 
+        <a href="History.html">History</a>
+
+        <a href="types.html">Types</a>
+
+        <a href="Antivirus.html">Antivirus</a>
+    </footer>
 
     <script src="js/vendor/modernizr-3.6.0.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
