--- a/index.html
+++ b/index.html
@@ -40,9 +40,10 @@
       </ul>
     </nav>
   </header>
-  <h1></h1>
-  <p>Hello world! This is HTML5 Boilerplate.</p>
-
+  <section>
+    <h1></h1>
+    <p></p>
+  </section>
 
 
 
