--- a/types.html
+++ b/types.html
@@ -40,8 +40,11 @@
             </ul>
         </nav>
     </header>
-    <h1>Types of viruses</h1>
-    <p>Hello world! This is HTML5 Boilerplate.</p>
+    <section>
+        <h1>Types of viruses</h1>
+        <p>Hello world! This is HTML5 Boilerplate.</p>
+    </section>
+
 
 
 
