--- a/History.html
+++ b/History.html
@@ -40,10 +40,11 @@
             </ul>
         </nav>
     </header>
-    <h1>History</h1>
-    <p></p>
-    <p></p>
-
+    <section>
+        <h1>History</h1>
+        <p></p>
+        <p></p>
+    </section>
 
 
 
