--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
-  <title></title>
+  <title>Home</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -23,6 +23,7 @@
 
   <!-- Add your site or application content here -->
   <header>
+     
     <nav>
       <ul>
         <li>
@@ -41,8 +42,17 @@
     </nav>
   </header>
   <section>
-    <h1></h1>
+      <h1>Home</h1>
+    <!-- For this first p we can just go ahead and give the brief description of viruses and y theyre dangerous -->
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis repudiandae 
+      velit nisi sequi, laudantium excepturi laboriosam quaerat ut ipsam iusto deleniti dolor accusamus, iste, quia impedit quod tempore odit molestiae! Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente, ad doloremque laborum sit neque, natus similique iure quasi eaque consectetur vero nisi! Inventore temporibus corporis nostrum officia recusandae harum minima? Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam ad eligendi quidem iure. Obcaecati harum eius dolorem similique saepe modi in voluptatem fugit placeat fugiat, est soluta iste unde nesciunt.</p>
+   
+   <!-- Right after that we add a graph of virus infections over a period of time -->
+   
     <p></p>
+
+
+
   </section>
 
 
