--- a/types.html
+++ b/types.html
@@ -40,9 +40,14 @@
             </ul>
         </nav>
     </header>
+    <article>
+        <p></p>
+    </article>
     <section>
         <h1>Types of viruses</h1>
-        <p>Hello world! This is HTML5 Boilerplate.</p>
+        <p>computer worms can duplicate into files as random names. In addition, worms need to be opened or runned in
+            order for the infection to actually work. Furthermore, all this shows that computer worms/viruses can
+            travel to different places just with the assistance of the computer user.</p>
     </section>
 
 
