Updated css and html

--- a/History.html
+++ b/History.html
@@ -40,11 +40,27 @@
             </ul>
         </nav>
     </header>
-    <section>
+    <article>
         <h1>History</h1>
-        <p></p>
-        <p></p>
-    </section>
+        <p>
+            Computer viruses are harmful programs that appeared in the 1980’s and they had the ability to ruin the
+            operation of the machine. These nuisances are more specifically a type of malware that makes copies of
+            itself and infects the device without the user’s knowledge. While these disruptions were small at first,
+            they quickly became a more serious threat as computers and computer networks became more important in
+            people’s daily lives. In 2002, there was an estimate of 60,000 different viruses in existence.
+        </p>
+
+    </article>
+    <article>
+        <p>
+            These days, they have evolved to perform numerous actions to disrupt and ruin a device. These can be small
+            things like small, annoying adds, to massive things like stealing personal information. The viruses became
+            more complex and it became harder for anti-viruses to locate them. Today, many virus writers create a few
+            new lines of the harmful code each and everyday and the increase of a virus’ capabilities led to a push for
+            the development of anti-viruses to better combat them. Nowadays, anti-virus software developers keep up
+            with virus writers by creating protection for these the viruses they create.
+        </p>
+    </article>
 
 
 
