--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       </ul>
     </nav>
   </header>
-  <section>
+  <article>
     <h1>Home</h1>
     <!-- For this first p we can just go ahead and give the brief description of viruses and y theyre dangerous -->
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis repudiandae
@@ -58,7 +58,7 @@
 
 
 
-  </section>
+  </article>
 
 
 
