--- a/Antivirus.html
+++ b/Antivirus.html
@@ -40,12 +40,12 @@
             </ul>
         </nav>
     </header>
-    <section>
+    <article>
         <h1>Antivirus</h1>
         <p>Hello world! This is HTML5 Boilerplate.</p>
         <p></p>
 
-    </section>
+    </article>
 
 
 
