--- a/types.html
+++ b/types.html
@@ -45,45 +45,57 @@
         <p>There are many different types of viruses that exist today. These consist of worms, Trojans, Spyware, etc.
             The different lines of code can do a variety of things to damage a machine or put the user of the device in
             danger. The different viruses also have varying strategies to influence the device. One of the most simple
-            tactics is to overwrite files with it’s own. Others are more subtle such as a Boot Sectors Virus, which
-            only executes the virus’s code when the device boots up. How stealthy a virus is can vary, one of the more
+            tactics is to overwrite files with it’s own. Others are more subtle such as a Boot Sector Virus, which
+            only executes the virus’s code when the device boots up. How stealthy a virus is can vary. One of the more
             stealthy types of is a Spacefiller Virus, which inserts its’ code into the program. The most stealthy
             viruses are written in way so the program acts normally while infected. Not only does the virus hide from
             the user, it also hides well from any anti-viruses the user may have installed. As time goes on the
-            diversity of the malicious code continues to grow.</p>
+            diversity of the malicious codes continue to grow.</p>
     </article>
     <section>
         <h1>Different Viruses</h1>
         <dl>
             <dt>Worms</dt>
             <dd>The self replicating worm virus, is a virus that can spread through a network with the assistance of
-                the computer user. In other words, “We distinguish between worms and viruses in that the latter infect
+                the computer user. 
+                <!-- In other words, “We distinguish between worms and viruses in that the latter infect
                 otherwise non-mobile files and therefore require some sort of user action to abet their propagation”
-                (Byers, Rubin, and Kormann 2003, October “A taxonomy of computer worms” 1). This exemplifies that worm
+                (Byers, Rubin, and Kormann 2003, October “A taxonomy of computer worms” 1).  -->
+                <!-- This exemplifies that  -->
+            Worm
                 viruses can jump from place to place, but they need help from user interaction. Also, worm viruses can
                 infect non-mobile files. Equally important, “This virus simply replicates into files with random names,
                 and is unlikely to be successful in any current computing environment because the chances are very poor
                 that any of the replicas will ever be run” (F. Cohen, 1992, “Computer Viruses - Theory and Experiments”
                 1). This explains that computer worms can duplicate into files as random names. In addition, worms need
-                to be opened or runned in order for the infection to actually work. Furthermore, all this shows that
-                computer worms/viruses can travel to different places just with the assistance of the computer user.</dd>
+                to be opened or runned in order for the infection to actually work. 
+                <!-- Furthermore, all this shows that
+                computer worms/viruses can travel to different places just with the assistance of the computer user. -->
+            </dd>
             <dt>Trojans</dt>
-            <dd>Trojan is a type of code or software that looks legitimate but it can take control of your computer. A
+            <dd>
+                <!-- Trojan is  --> Trojans are
+                a type of code or software that looks legitimate but it can take control of your computer. 
+                Trojan code must be activated by the user, which often happens by mistake, or without the user's knowledge.
+                <!-- A
                 misconception is when a Trojan is called a virus, a virus can execute and replicate themselves but a
-                Trojan cannot, a user has to execute trojans. The name Trojan stems from greek history where a wooden
+                Trojan cannot, a user has to execute trojans.  -->
+                The name Trojan stems from greek history where a wooden
                 horse was used to invade the city of troy. The various types of Trojans are remote access, data
                 sending, rootkit and backdoor. In the past there have been trojan attacks and the biggest ones are Zeus
                 in 2007 where it was used to swipe data from the us department of transportation, Cryptolocker in 2013
                 where it spread through emails and held users files for a $400 ransom, and Kovter, which was used for
                 click-fraud so the clicker could make revenue for the attacker.</dd>
             <dt>Spyware</dt>
-            <dd>Spyware is another type of malicious code to be careful of. Spyware has the ability to go undetected by
+            <dd>
+                <!-- Spyware is another type of malicious code to be careful of.  -->
+                Spyware has the ability to go undetected by
                 the user. This code records web surfing habits, and even could steal crucial information such as
                 passwords. This issue posses a major security to all users on the internet, as all the information
                 stolen goes back to the spyware distributor, to do whatever they desire. Typically, they hold the
-                information ransom or use the stolen passwords to steal money. How is to deal with this type of virus
+                information ransom or use the stolen passwords to steal money. How is to deal with this type of issue
                 is especially difficult. Writer’s of this code, if they are aware of detection strategies, could build
-                the code in a way that is more difficult and costly to detect. It is also challenging to determine what
+                the code in a way that is more difficult, and costly to detect. It is also challenging to determine what
                 exact information was taken. Spyware experts would have to track where the information goes and take
                 note of the behavior of that particular spyware, just to try and determine what information was stolen.
                 Since Spyware is such a massive danger to internet users everywhere, people have done extensive
