--- a/index.html
+++ b/index.html
@@ -44,17 +44,22 @@
   <article>
     <h1>Home</h1>
     <!-- For this first p we can just go ahead and give the brief description of viruses and y theyre dangerous -->
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis repudiandae
-      velit nisi sequi, laudantium excepturi laboriosam quaerat ut ipsam iusto deleniti dolor accusamus, iste, quia
-      impedit quod tempore odit molestiae! Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente, ad
-      doloremque laborum sit neque, natus similique iure quasi eaque consectetur vero nisi! Inventore temporibus
-      corporis nostrum officia recusandae harum minima? Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam
-      ad eligendi quidem iure. Obcaecati harum eius dolorem similique saepe modi in voluptatem fugit placeat fugiat,
-      est soluta iste unde nesciunt.</p>
+    <p> 
+      A virus is a infection that can spread through a computer system by the user. 
+      There are multiple types of viruses that could infect a device.
+      Currently, the primary vehicle for transmission of computer viruses is electronic mail. 
+      Viruses typically arrive on a computer as an attachment to an email message, which, 
+      when activated by the user, sends further copies of itself to the system. 
+      However, there is different ways to stop the spread of a virus. 
+      Such as, anti-viruses in which they are there to detect the spread of viruses 
+      and stop them. Therefore, this will explain the different types of viruses and 
+      ways to detect them and stop the spread of infection.</p>
 
     <!-- Right after that we add a graph of virus infections over a period of time -->
+<p>
+    <img src="Virus_numbers_2.jpg" alt="VirusGraph">
 
-    <p></p>
+</p>
 
 
 
