--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
     <!-- Right after that we add a graph of virus infections over a period of time -->
 <p>
-    <img src="" alt="VirusGraph">
+    <img src="" alt="">
 
 </p>
 
