--- a/Antivirus.html
+++ b/Antivirus.html
@@ -14,6 +14,7 @@
 
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/antivirus.css">
+   
 </head>
 
 <body>
@@ -41,9 +42,56 @@
         </nav>
     </header>
     <article>
-        <h1>Antivirus</h1>
-        <p>Hello world! This is HTML5 Boilerplate.</p>
-        <p></p>
+        <h1>Anti-viruses   </h1>
+        <img src="security_3.jpg" alt="anti-virus">
+        <p>The purpose of an antivirus program is to find and remove or
+             quarantine the virus that has infected the users computer using 
+             automatic and manual scanning capabilities. The three stages of 
+             an antivirus program is to first scan for malicious programs within 
+             the computer, the second is to quarantine the virus and the third 
+             is to remove it from the computer. A more in depth look into the first 
+             stage of an antivirus. 
+             <!-- “The most common method of identifying viruses 
+             are signature strings. A 16-B string has become the defacto AV industry 
+             standard”(Harmer, 2002, p. 253). -->
+            Some known antivirus protection programs are Bitdefender 
+            Antivirus, Norton Antivirus, VIPRE advanced security, Avira free 
+            security, Kaspersky Anti-Virus, Webroot, and ESET.
+        Pros and cons for some are, 
+        Bitdefender allows the user to delete threats safely 
+        and it includes a personal firewall.
+        Avira is free, includes a vpn and has a software
+         vulnerability scan, but has frequent pop-up ads and will slow down the computer. 
+        VIPRE has clearly marked folders and it doesn’t
+         slow down the computer even during scans, the only con is that there are some viruses that it couldn’t detect from a list of 300 viruses.
+        Norton antivirus has a user friendly interface 
+        and is constantly updated, a con is the large amount of ram usage.</p>
+      
+        <p>Virus detection identifies if there is a virus by running the system 
+            and any files sufficiently to see if there would be a infection that 
+            would start growing on important files. 
+            <!-- Furthermore, “Dynamic detection 
+            method decides whether or not code is infected by running the code and
+             observing its behavior” (Bailey, Oberheide, Andersen, Mao, Jahanian, 
+             and Nazario, 2007 "Automated classification and 
+             analysis of internet malware").  -->
+             This represents that the detection would 
+             run through and examine the system to see if there might be a virus 
+             roaming through it and infecting any personal information. Also, it
+              will have some anti-viruses go and disinfect the system after
+               identifying the viruses. 
+               <!-- Likewise, “Current commercial virus detectors 
+               are based on three distinct technologies: activity monitors, 
+               signature scanners, and le authentication programs” 
+               (Boer and Perelson, 1993 “How diverse should the immune system be?”).  -->
+               This shows that there is some ways to actual identify weather or 
+               not there is a virus. The ways are mostly to scan inside the 
+               local machine and see if they get any signatures and 
+               see what type of virus it might actually be, 
+               but they use these ways for identifying the 
+               type of virus and where it is. This concludes 
+               that the virus detections are there mostly to 
+               identify the types of viruses and where it is.</p>
 
     </article>
 
