--- a/History.html
+++ b/History.html
@@ -14,6 +14,7 @@
 
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/history.css">
+   
 </head>
 
 <body>
@@ -41,7 +42,7 @@
         </nav>
     </header>
     <article>
-        <h1>History</h1>
+        <h1>History  <img src="Computer_virus_3.jpg" alt="virus"></h1>
         <p>
             Computer viruses are harmful programs that appeared in the 1980’s and they had the ability to ruin the
             operation of the machine. These nuisances are more specifically a type of malware that makes copies of
@@ -49,8 +50,9 @@
             they quickly became a more serious threat as computers and computer networks became more important in
             people’s daily lives. In 2002, there was an estimate of 60,000 different viruses in existence.
         </p>
-
+       
     </article>
+   
     <article>
         <p>
             These days, they have evolved to perform numerous actions to disrupt and ruin a device. These can be small
