--- a/index.html
+++ b/index.html
@@ -56,10 +56,12 @@
       ways to detect them and stop the spread of infection.</p>
 
     <!-- Right after that we add a graph of virus infections over a period of time -->
-<p>
-    <img src="" alt="">
 
-</p>
+  <h2>Viruses Found each Year</h2>
+    <img src="Virus_numbers_4.jpg" alt=virus_graph>
+
+
+    
 
 
 
