--- a/types.html
+++ b/types.html
@@ -14,6 +14,7 @@
 
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/types.css">
+    
 </head>
 
 <body>
@@ -41,7 +42,7 @@
         </nav>
     </header>
     <article>
-        <h1>Types of viruses</h1>
+        <h1>Types of viruses    <img src="types_3.png" alt="types"></h1>
         <p>There are many different types of viruses that exist today. These consist of worms, Trojans, Spyware, etc.
             The different lines of code can do a variety of things to damage a machine or put the user of the device in
             danger. The different viruses also have varying strategies to influence the device. One of the most simple
@@ -55,7 +56,7 @@
     <section>
         <h1>Different Viruses</h1>
         <dl>
-            <dt>Worms</dt>
+            <dt><h2>Worms</h2></dt>
             <dd>The self replicating worm virus, is a virus that can spread through a network with the assistance of
                 the computer user. 
                 <!-- In other words, “We distinguish between worms and viruses in that the latter infect
@@ -68,11 +69,11 @@
                 and is unlikely to be successful in any current computing environment because the chances are very poor
                 that any of the replicas will ever be run” (F. Cohen, 1992, “Computer Viruses - Theory and Experiments”
                 1). This explains that computer worms can duplicate into files as random names. In addition, worms need
-                to be opened or runned in order for the infection to actually work. 
+                to be opened or ran in order for the infection to actually work. 
                 <!-- Furthermore, all this shows that
                 computer worms/viruses can travel to different places just with the assistance of the computer user. -->
             </dd>
-            <dt>Trojans</dt>
+            <dt><h2>Trojans</h2></dt>
             <dd>
                 <!-- Trojan is  --> Trojans are
                 a type of code or software that looks legitimate but it can take control of your computer. 
@@ -86,7 +87,7 @@
                 in 2007 where it was used to swipe data from the us department of transportation, Cryptolocker in 2013
                 where it spread through emails and held users files for a $400 ransom, and Kovter, which was used for
                 click-fraud so the clicker could make revenue for the attacker.</dd>
-            <dt>Spyware</dt>
+            <dt><h2>Spyware</h2></dt>
             <dd>
                 <!-- Spyware is another type of malicious code to be careful of.  -->
                 Spyware has the ability to go undetected by
