Changes and updates

--- a/index.html
+++ b/index.html
@@ -44,24 +44,24 @@
   <article>
     <h1>Home</h1>
     <!-- For this first p we can just go ahead and give the brief description of viruses and y theyre dangerous -->
-    <p> 
-      A virus is a infection that can spread through a computer system by the user. 
+    <p>
+      A virus is a infection that can spread through a computer system by the user.
       There are multiple types of viruses that could infect a device.
-      Currently, the primary vehicle for transmission of computer viruses is electronic mail. 
-      Viruses typically arrive on a computer as an attachment to an email message, which, 
-      when activated by the user, sends further copies of itself to the system. 
-      However, there is different ways to stop the spread of a virus. 
-      Such as, anti-viruses in which they are there to detect the spread of viruses 
-      and stop them. Therefore, this will explain the different types of viruses and 
+      Currently, the primary vehicle for transmission of computer viruses is electronic mail.
+      Viruses typically arrive on a computer as an attachment to an email message, which,
+      when activated by the user, sends further copies of itself to the system.
+      However, there is different ways to stop the spread of a virus.
+      Such as, anti-viruses in which they are there to detect the spread of viruses
+      and stop them. Therefore, this will explain the different types of viruses and
       ways to detect them and stop the spread of infection.</p>
 
     <!-- Right after that we add a graph of virus infections over a period of time -->
 
-  <h2>Viruses Found each Year</h2>
+    <h2>Viruses Found each Year</h2>
     <img src="Virus_numbers_4.jpg" alt=virus_graph>
 
 
-    
+
 
 
 
@@ -74,7 +74,7 @@
 
 
 
-  <footer>
+  <!-- <footer>
     <nav>
       <ul>
         <li>
@@ -91,7 +91,7 @@
         </li>
       </ul>
     </nav>
-  </footer>
+  </footer> -->
 
 
   <script src="js/vendor/modernizr-3.6.0.min.js"></script>
