--- a/types.html
+++ b/types.html
@@ -14,7 +14,7 @@
 
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/types.css">
-    
+
 </head>
 
 <body>
@@ -42,7 +42,7 @@
         </nav>
     </header>
     <article>
-        <h1>Types of viruses    <img src="types_3.png" alt="types"></h1>
+        <h1>Types of viruses <img src="types_3.png" alt="types"></h1>
         <p>There are many different types of viruses that exist today. These consist of worms, Trojans, Spyware, etc.
             The different lines of code can do a variety of things to damage a machine or put the user of the device in
             danger. The different viruses also have varying strategies to influence the device. One of the most simple
@@ -53,31 +53,36 @@
             the user, it also hides well from any anti-viruses the user may have installed. As time goes on the
             diversity of the malicious codes continue to grow.</p>
     </article>
-    <section>
+    <section id="space">
         <h1>Different Viruses</h1>
         <dl>
-            <dt><h2>Worms</h2></dt>
+            <dt>
+                <h2>Worms</h2>
+            </dt>
             <dd>The self replicating worm virus, is a virus that can spread through a network with the assistance of
-                the computer user. 
+                the computer user.
                 <!-- In other words, “We distinguish between worms and viruses in that the latter infect
                 otherwise non-mobile files and therefore require some sort of user action to abet their propagation”
                 (Byers, Rubin, and Kormann 2003, October “A taxonomy of computer worms” 1).  -->
                 <!-- This exemplifies that  -->
-            Worm
+                Worm
                 viruses can jump from place to place, but they need help from user interaction. Also, worm viruses can
                 infect non-mobile files. Equally important, “This virus simply replicates into files with random names,
                 and is unlikely to be successful in any current computing environment because the chances are very poor
                 that any of the replicas will ever be run” (F. Cohen, 1992, “Computer Viruses - Theory and Experiments”
                 1). This explains that computer worms can duplicate into files as random names. In addition, worms need
-                to be opened or ran in order for the infection to actually work. 
+                to be opened or ran in order for the infection to actually work.
                 <!-- Furthermore, all this shows that
                 computer worms/viruses can travel to different places just with the assistance of the computer user. -->
             </dd>
-            <dt><h2>Trojans</h2></dt>
+            <dt>
+                <h2>Trojans</h2>
+            </dt>
             <dd>
                 <!-- Trojan is  --> Trojans are
-                a type of code or software that looks legitimate but it can take control of your computer. 
-                Trojan code must be activated by the user, which often happens by mistake, or without the user's knowledge.
+                a type of code or software that looks legitimate but it can take control of your computer.
+                Trojan code must be activated by the user, which often happens by mistake, or without the user's
+                knowledge.
                 <!-- A
                 misconception is when a Trojan is called a virus, a virus can execute and replicate themselves but a
                 Trojan cannot, a user has to execute trojans.  -->
@@ -87,7 +92,9 @@
                 in 2007 where it was used to swipe data from the us department of transportation, Cryptolocker in 2013
                 where it spread through emails and held users files for a $400 ransom, and Kovter, which was used for
                 click-fraud so the clicker could make revenue for the attacker.</dd>
-            <dt><h2>Spyware</h2></dt>
+            <dt>
+                <h2>Spyware</h2>
+            </dt>
             <dd>
                 <!-- Spyware is another type of malicious code to be careful of.  -->
                 Spyware has the ability to go undetected by
@@ -96,7 +103,8 @@
                 stolen goes back to the spyware distributor, to do whatever they desire. Typically, they hold the
                 information ransom or use the stolen passwords to steal money. How is to deal with this type of issue
                 is especially difficult. Writer’s of this code, if they are aware of detection strategies, could build
-                the code in a way that is more difficult, and costly to detect. It is also challenging to determine what
+                the code in a way that is more difficult, and costly to detect. It is also challenging to determine
+                what
                 exact information was taken. Spyware experts would have to track where the information goes and take
                 note of the behavior of that particular spyware, just to try and determine what information was stolen.
                 Since Spyware is such a massive danger to internet users everywhere, people have done extensive
@@ -114,7 +122,7 @@
 
 
 
-    <footer>
+    <!-- <footer>
         <a href="index.html">Home</a>
 
         <a href="History.html">History</a>
@@ -122,7 +130,7 @@
         <a href="types.html">Types</a>
 
         <a href="Antivirus.html">Antivirus</a>
-    </footer>
+    </footer> -->
 
     <script src="js/vendor/modernizr-3.6.0.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
