--- a/History.html
+++ b/History.html
@@ -72,7 +72,7 @@
 
 
 
-    <footer>
+    <!-- <footer>
         <a href="index.html">Home</a>
 
         <a href="History.html">History</a>
@@ -80,7 +80,7 @@
         <a href="types.html">Types</a>
 
         <a href="Antivirus.html">Antivirus</a>
-    </footer>
+    </footer> -->
 
     <script src="js/vendor/modernizr-3.6.0.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
