--- a/types.html
+++ b/types.html
@@ -42,7 +42,7 @@
         </nav>
     </header>
     <article>
-        <h1>Types of viruses <img src="types_3.png" alt="types"></h1>
+        <h1>Types of viruses <img src="types.png" alt="types"></h1>
         <p>There are many different types of viruses that exist today. These consist of worms, Trojans, Spyware, etc.
             The different lines of code can do a variety of things to damage a machine or put the user of the device in
             danger. The different viruses also have varying strategies to influence the device. One of the most simple
@@ -53,7 +53,7 @@
             the user, it also hides well from any anti-viruses the user may have installed. As time goes on the
             diversity of the malicious codes continue to grow.</p>
     </article>
-    <section id="space">
+    <section>
         <h1>Different Viruses</h1>
         <dl>
             <dt>
