Updated and moved files

--- a/Antivirus.html
+++ b/Antivirus.html
@@ -43,7 +43,7 @@
     </header>
     <article>
         <h1>Anti-viruses </h1>
-        <img src="security_3.jpg" alt="anti-virus">
+        <img src="png/security_3.jpg" alt="anti-virus">
         <p>The purpose of an antivirus program is to find and remove or
             quarantine the virus that has infected the users computer using
             automatic and manual scanning capabilities. The three stages of
