--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     <!-- Right after that we add a graph of virus infections over a period of time -->
 
     <h2>Viruses Found each Year</h2>
-    <img src="Virus_numbers_4.jpg" alt=virus_graph>
+    <img src="png/Virus_numbers_4.jpg" alt=virus_graph>
 
 
 
