Checked and updated files

--- a/History.html
+++ b/History.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html class="no-js" lang="">
+<html class="no-js" lang="en">
 
 <head>
     <meta charset="utf-8">
@@ -54,6 +54,7 @@
     </article>
 
     <article>
+        <h1>Viruses Quick Definition</h1>
         <p>
             These days, they have evolved to perform numerous actions to disrupt and ruin a device. These can be small
             things like small, annoying adds, to massive things like stealing personal information. The viruses became
