--- a/types.html
+++ b/types.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html class="no-js" lang="">
+<html class="no-js" lang="en">
 
 <head>
     <meta charset="utf-8">
@@ -57,7 +57,7 @@
         <h1>Different Viruses</h1>
         <dl>
             <dt>
-                <h2>Worms</h2>
+                Worms
             </dt>
             <dd>The self replicating worm virus, is a virus that can spread through a network with the assistance of
                 the computer user.
@@ -76,7 +76,7 @@
                 computer worms/viruses can travel to different places just with the assistance of the computer user. -->
             </dd>
             <dt>
-                <h2>Trojans</h2>
+                Trojans
             </dt>
             <dd>
                 <!-- Trojan is  --> Trojans are
@@ -93,7 +93,7 @@
                 where it spread through emails and held users files for a $400 ransom, and Kovter, which was used for
                 click-fraud so the clicker could make revenue for the attacker.</dd>
             <dt>
-                <h2>Spyware</h2>
+                Spyware
             </dt>
             <dd>
                 <!-- Spyware is another type of malicious code to be careful of.  -->
