--- a/History.html
+++ b/History.html
@@ -42,8 +42,11 @@
         </nav>
     </header>
     <article>
-        <h1>History <img src="png/Computer_virus_3.jpg" alt="virus"></h1>
+        <h1>History </h1>
+        <aside> <img src="png/Computer_virus_3.jpg" alt="virus"></aside>
+
         <p>
+
             Computer viruses are harmful programs that appeared in the 1980’s and they had the ability to ruin the
             operation of the machine. These nuisances are more specifically a type of malware that makes copies of
             itself and infects the device without the user’s knowledge. While these disruptions were small at first,
