--- a/Antivirus.html
+++ b/Antivirus.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html class="no-js" lang="en">
 
+<!-- The code below holds background information for the website. 
+    This includes the title and links to the CSS styles sheets 
+    to make the website look better. -->
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
@@ -16,7 +19,9 @@
     <link rel="stylesheet" href="css/antivirus.css">
 
 </head>
-
+<!-- The code below holds the main content for the website. 
+    Everything the user will read is below. 
+    This code also holds hyperlinks to the many website pages -->
 <body>
     <!--[if lte IE 9]>
     <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
@@ -42,7 +47,7 @@
         </nav>
     </header>
     <article>
-        <h1>Anti-viruses </h1>
+        <h1>Antiviruses </h1>
         <img src="png/security_3.jpg" alt="anti-virus">
         <p>The purpose of an antivirus program is to find and remove or
             quarantine the virus that has infected the users computer using
@@ -56,7 +61,7 @@
              standard”(Harmer, 2002, p. 253). -->
             Some known antivirus protection programs are Bitdefender
             Antivirus, Norton Antivirus, VIPRE advanced security, Avira free
-            security, Kaspersky Anti-Virus, Webroot, and ESET.
+            security, Kaspersky AntiVirus, Webroot, and ESET.
             Pros and cons for some are,
             Bitdefender allows the user to delete threats safely
             and it includes a personal firewall.
@@ -71,20 +76,13 @@
         <p>Virus detection identifies if there is a virus by running the system
             and any files sufficiently to see if there would be a infection that
             would start growing on important files.
-            <!-- Furthermore, “Dynamic detection 
-            method decides whether or not code is infected by running the code and
-             observing its behavior” (Bailey, Oberheide, Andersen, Mao, Jahanian, 
-             and Nazario, 2007 "Automated classification and 
-             analysis of internet malware").  -->
+           
             This represents that the detection would
             run through and examine the system to see if there might be a virus
             roaming through it and infecting any personal information. Also, it
-            will have some anti-viruses go and disinfect the system after
+            will have some antiviruses go and disinfect the system after
             identifying the viruses.
-            <!-- Likewise, “Current commercial virus detectors 
-               are based on three distinct technologies: activity monitors, 
-               signature scanners, and le authentication programs” 
-               (Boer and Perelson, 1993 “How diverse should the immune system be?”).  -->
+          
             This shows that there is some ways to actual identify weather or
             not there is a virus. The ways are mostly to scan inside the
             local machine and see if they get any signatures and
