--- a/History.html
+++ b/History.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html class="no-js" lang="en">
 
+<!-- The code below holds background information for the website. 
+    This includes the title and links to the CSS styles sheets 
+    to make the website look better. -->
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
@@ -16,7 +19,9 @@
     <link rel="stylesheet" href="css/history.css">
 
 </head>
-
+<!-- The code below holds the main content for the website. 
+    Everything the user will read is below. 
+    This code also holds hyperlinks to the many website pages -->
 <body>
     <!--[if lte IE 9]>
     <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
@@ -57,13 +62,13 @@
     </article>
 
     <article>
-        <h1>Viruses Quick Definition</h1>
+        <h2>Viruses</h2>
         <p>
-            These days, they have evolved to perform numerous actions to disrupt and ruin a device. These can be small
+            These days, viruses have evolved to perform numerous actions to disrupt and ruin a device. These can be small
             things like small, annoying adds, to massive things like stealing personal information. The viruses became
-            more complex and it became harder for anti-viruses to locate them. Today, many virus writers create a few
+            more complex and it became harder for antiviruses to locate them. Today, many virus writers create a few
             new lines of the harmful code each and everyday and the increase of a virus’ capabilities led to a push for
-            the development of anti-viruses to better combat them. Nowadays, anti-virus software developers keep up
+            the development of antiviruses to better combat them. Nowadays, antivirus software developers keep up
             with virus writers by creating protection for these the viruses they create.
         </p>
     </article>
