--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html class="no-js" lang="en">
 
+<!-- The code below holds background information for the website. 
+    This includes the title and links to the CSS styles sheets 
+    to make the website look better. -->
 <head>
   <meta charset="utf-8">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
@@ -15,7 +18,9 @@
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/main.css">
 </head>
-
+<!-- The code below holds the main content for the website. 
+    Everything the user will read is below. 
+    This code also holds hyperlinks to the many website pages -->
 <body>
   <!--[if lte IE 9]>
     <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
@@ -51,7 +56,7 @@
       Viruses typically arrive on a computer as an attachment to an email message, which,
       when activated by the user, sends further copies of itself to the system.
       However, there is different ways to stop the spread of a virus.
-      Such as, anti-viruses in which they are there to detect the spread of viruses
+      Such as, antiviruses in which they are there to detect the spread of viruses
       and stop them. Therefore, this will explain the different types of viruses and
       ways to detect them and stop the spread of infection.</p>
 
@@ -64,7 +69,7 @@
 
 
 
-
+    
   </article>
 
 
